@@ -26,26 +26,11 @@ public class Main {
                 .collect(Collectors.toList());
 
         System.out.println("Призывники " + stream);
-        List<String> stream1 = persons.stream()
-                .filter(x -> x.getAge() > 18 && x.getAge() < 65)
-                .filter(x -> x.getAge() > 18 && x.getAge() < 60)
-                .filter(x -> x.getEducation() == Education.HIGHER)
-                .map(person -> person.getFamily())
-                .collect(Collectors.toList());
+        List<Person> stream1 = persons.stream()
+                .filter(person -> (person.getSex() == Sex.WOMAN && person.getAge() >= 18 && person.getAge() <= 60 && person.getEducation() == Education.HIGHER)
+                        || (person.getSex() == Sex.MAN && person.getAge() >= 18 && person.getAge() <= 65 && person.getEducation() == Education.HIGHER))
+                        .sorted(Comparator.comparing(Person::getFamily))
+                                .toList();
       System.out.println("Работоспособоное население " + stream1);
-
-        /* как сделать с помощью метода sorted?
-        Подскажите пожалуйста
-         */
-
-         /* List<String> stream2 = persons.stream()
-                .filter(x -> x.getAge() > 18)
-                .filter(x -> x.getAge() < 60)
-                .filter(person -> person.getSex() == Sex.WOMAN)
-                .filter(x -> x.getEducation() == Education.HIGHER)
-                    .map(person -> person.getFamily())
-                .collect(Collectors.toList());
-        System.out.println("Работоспособоные женщины " + stream2);*/
-
     }
 }
